--- a/.env
+++ b/.env
@@ -27,3 +27,4 @@ APP_SECRET=7ab4b804492c9390e11fad6258984108
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
 DATABASE_URL="postgresql://app:!PassWord!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+REDIS_URL="redis://redis:6379"
