--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,6 +71,11 @@ services:
       # - ./docker/db/data:/var/lib/postgresql/data:rw
 ###< doctrine/doctrine-bundle ###
 
+  redis:
+    image: redis:7.0.0
+    ports:
+      - 6379
+
 volumes:
   php_socket:
   caddy_data:
